# Rust

./: Cargo.toml
R401-voting-machine/: Cargo.toml
R401-voting-machine/src/: main.rs
concurrency/: Cargo.toml
exquisite_corpse/: Cargo.toml
exquisite_corpse/src/: lib.rs
network_services/: Cargo.toml
options_and_results/: Cargo.toml
ownership/src/: main.rs
port_scanner/: Cargo.toml
port_scanner/src/: lib.rs
rustlings/exercises/01_variables/: variables5.rs
rustlings/exercises/02_functions/: functions1.rs
rustlings/exercises/03_if/: if1.rs
rustlings/exercises/04_primitive_types/: primitive_types2.rs
rustlings/exercises/06_move_semantics/: move_semantics2.rs  move_semantics4.rs
rustlings/exercises/07_structs/: structs1.rs  structs2.rs  structs3.rs
rustlings/exercises/08_enums/: enums2.rs
rustlings/exercises/09_strings/: strings3.rs  strings4.rs
rustlings/exercises/10_modules/: modules1.rs  modules2.rs
rustlings/exercises/quizzes/: quiz1.rs
v010_spaghetti/: Cargo.toml
v020_configuration/: Cargo.toml
v020_configuration/src/: lib.rs  main.rs
v021_app_builder/: Cargo.toml
v021_app_builder/src/: app_builder.rs  configuration.rs  main.rs
v021_app_builder/tests/: voting_tests.rs
v030_domain/: Cargo.toml
v030_domain/src/: app_builder.rs  domain.rs  main.rs
v040_memory/: Cargo.toml
v041_file/: Cargo.toml
v041_file/src/: app_builder.rs  lib.rs
v041_file/src/storages/: file.rs  (+1 more)
v050_use_cases/: Cargo.toml
v050_use_cases/src/: domain.rs  lib.rs  main.rs  storage.rs  use_cases.rs
v050_use_cases/src/storages/: file.rs
